tests/baselines/reference/tupleIntersectionArity.errors.txt
tests/cases/conformance/types/rest/tupleIntersectionArity.ts(6,4): error TS2556: A spread argument must either have a tuple type or be passed to a rest parameter.


==== tests/cases/conformance/types/rest/tupleIntersectionArity.ts (1 errors) ====
    declare const tuple1: [number, number, number] & { _nominal_a: never };
    declare const tuple2: [number, number, number] & [string, string, string];
    
    declare const f1: (...params: [number, number, number]) => void;
    f1(...tuple1);
    f1(...tuple2); // Error
       ~~~~~~~~~
!!! error TS2556: A spread argument must either have a tuple type or be passed to a rest parameter.
    export {}
    